--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -310,10 +310,10 @@ showBasketTotalsRebate = "Rebate"
 showBasketShippingCostsNet = "Shipping (net)"
 showBasketShippingCostsGross = "Shipping (gross)"
 showBasketTotalSumNet = "Total (net)"
-showBasketPromotionCoupon = "Coupon value"
+showBasketPromotionCoupon = "Coupon for special offers"
 showBasketVats = "VAT"
 showBasketTotalSumGross = "Total (gross)"
-showBasketSalesCoupon = "Coupon discount"
+showBasketSalesCoupon = "Gift card"
 showBasketOpenAmount = "Outstanding amount"
 ; Place order
 placeOrderButtonSizeLabel = "Button size"
@@ -335,7 +335,7 @@ addressLayoutGB = "Address format UK"
 addressFieldsInvoiceDE = "Show invoice address fields (DE)"
 addressRequiredFieldsInvoiceDE = "Validate invoice address fields (DE)"
 addressFieldsInvoiceGB = "Show invoice address fields (UK)"
-addressRequiredFieldsInvoiceGB = "Validate invlice address fields (UK)"
+addressRequiredFieldsInvoiceGB = "Validate invoice address fields (UK)"
 addressFieldsShippingDE = "Show shipping address fields (DE)"
 addressRequiredFieldsShippingDE = "Validate shipping address fields (DE)"
 addressFieldsShippingGB = "Show shipping address fields (UK)"
@@ -344,10 +344,10 @@ addressFieldName1 = Company
 addressFieldVatNumber = VAT number
 addressFieldSalutation = Form of address
 addressFieldTitle = Title
-addressFieldBirthday = Date of Birth
+addressFieldBirthday = Date of birth
 addressFieldName4 = Name suffix
 addressFieldAddress3 = Additional address 1
-addressFieldAddress4 = Additionaql address 2
+addressFieldAddress4 = Additional address 2
 addressFieldStateId = State
 addressFieldPhoneNumber = Phone number
 addressFieldEnName1 = Company
@@ -370,17 +370,17 @@ contactWishHinttextTooltip = "Enter text. This text is displayed below the title
 couponLabel = "Coupon input"
 ; Terms and conditions checkbox
 gtcCheckLabel = "Terms and conditions checkbox"
-gtcCheckHideCheckboxLabel = "Hide chackbox"
-gtcCheckHideCheckboxTooltip = "Activate to hide checkbox.."
+gtcCheckHideCheckboxLabel = "Hide checkbox"
+gtcCheckHideCheckboxTooltip = "Activate to hide checkbox."
 gtcCheckIsPreselectedLabel = "Preselect checkbox"
 gtcCheckIsPreselectedTooltip = "Activate to preselect checkbox by default."
 gtcCheckIsRequiredLabel = "Required field"
 gtcCheckIsRequiredTooltip = "Activate to make checkbox mandatory before purchase."
 gtcCheckCustomTextLabel = "Text"
-gtcCheckCustomTextTooltip = "Enter own text that is displayed next to checkbox."
+gtcCheckCustomTextTooltip = "Enter text that is displayed next to checkbox."
 ; Subscribe Newsletter Check
 subscribeNewsletterCheckCustomTextLabel = "Text"
-subscribeNewsletterCheckCustomTextTooltip = "Enter own text that is displayed next to checkbox."
+subscribeNewsletterCheckCustomTextTooltip = "Enter text that is displayed next to checkbox."
 subscribeNewsletterCheckEmailFolderLabel = "E-mail folder ID"
 subscribeNewsletterCheckEmailFolderTooltip = "Enter e-mail folder ID."
 subscribeNewsletterCheckHideCheckboxLabel = "Hide checkbox"
