ADD mock data for shipping profile to be displayed in shop builder preview

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -296,6 +296,8 @@ collapseBoxTextareaTooltip = "Antwort eingeben. Dieser Text wird als Antwort des
 shippingProfileLabel = "Versandauswahl TODO"
 shippingProfileHinttextLabel = "Hinweistext"
 shippingProfileHinttextTooltip = "Hinweistext eingeben. Dieser Text wird zwischen der Überschrift und der Auswahl angezeigt."
+dummyParcelServiceName = "Versanddienstleister :i"
+dummyParcelServicePresetName = "Versandprofil :i"
 ; Payment provider
 paymentProviderLabel = "Zahlungsart Auswahl"
 paymentProviderHinttextLabel = "Hinweistext"
