--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -297,6 +297,8 @@ collapseBoxTextareaTooltip = "Enter answer. This text will be the answer to the 
 shippingProfileLabel = "Shipping profile selection"
 shippingProfileHinttextLabel = "Text"
 shippingProfileHinttextTooltip = "Enter text. This is displayed between title and shipping profile selection."
+dummyParcelServiceName = "Shipping provider :i"
+dummyParcelServicePresetName = "Shipping profile :i"
 ; Payment provider
 paymentProviderLabel = "Payment provider selection"
 paymentProviderHinttextLabel = "Text"
