finalized logout button

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -209,6 +209,9 @@ liveShoppingShowStockLabel = "Bestand anzeigen"
 liveShoppingShowStockProgressLabel = "Bestandsabhängigen Fortschrittsbalken anzeigen"
 liveShoppingPlaceholderTitle = "Kein Angebot aktiv"
 liveShoppingPlaceholderDescription = "An dieser Stelle wird kein Inhalt angezeigt, bis ein Angebot aktiv ist."
+; LogoutButton
+logoutButtonLabel = "Ausloggen-Button"
+logoutButtonSizeTooltip = "Größe des Ausloggen-Buttons auswählen"
 ; StickyContainer
 stickyContainerLabel = "Sticky Container"
 ; Text
