--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -210,6 +210,9 @@ liveShoppingShowStockLabel = "Display stock"
 liveShoppingShowStockProgressLabel = "Display stock-dependent prograss bar"
 liveShoppingPlaceholderTitle = "No active offer"
 liveShoppingPlaceholderDescription = "We will showcase the next offer here once it becomes active."
+; LogoutButton
+logoutButtonLabel = "Logout button"
+logoutButtonSizeTooltip = "Select logout button size."
 ; StickyContainer
 stickyContainerLabel = "Sticky container"
 ; Text
