Refactor hintText variables

--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -295,14 +295,14 @@ collapseBoxTextareaLabel = "Answer"
 collapseBoxTextareaTooltip = "Enter answer. This text will be the answer to the question and will be displayed after clicking the question."
 ; Shipping Profile Select
 shippingProfileLabel = "Shipping profile selection"
-shippingProfileHinttextLabel = "Text"
-shippingProfileHinttextTooltip = "Enter text. This is displayed between title and shipping profile selection."
+shippingProfileHintTextLabel = "Text"
+shippingProfileHintTextTooltip = "Enter text. This is displayed between title and shipping profile selection."
 dummyParcelServiceName = "Shipping provider :i"
 dummyParcelServicePresetName = "Shipping profile :i"
 ; Payment provider
 paymentProviderLabel = "Payment provider selection"
-paymentProviderHinttextLabel = "Text"
-paymentProviderHinttextTooltip = "Enter text. This is displayed between title and payment provider selection."
+paymentProviderHintTextLabel = "Text"
+paymentProviderHintTextTooltip = "Enter text. This is displayed between title and payment provider selection."
 ; Basket totals
 basketTotalsLabel = "Price information"
 basketTotalsVisibleFields = "Show price information"
@@ -327,6 +327,8 @@ placeOrderLabel = "Purchase button"
 ; Address
 addressLabel = "Address selection"
 addressType = "Address type"
+addressHintTextLabel = "Text"
+addressHintTextTooltip = "Enter text. This text is displayed below the title."
 addressTypeTooltip = "Select address type."
 addressInvoice = "Invoice address"
 addressShipping = "Shipping address"
@@ -366,8 +368,8 @@ addressFieldEnPhoneNumber = Phone number
 basketLabel = "Shopping cart content"
 ; ContactWish
 contactWish = "Notes and requests"
-contactWishHinttextLabel = "Text"
-contactWishHinttextTooltip = "Enter text. This text is displayed below the title."
+contactWishHintTextLabel = "Text"
+contactWishHintTextTooltip = "Enter text. This text is displayed below the title."
 ; Coupon
 couponLabel = "Coupon input"
 ; Terms and conditions checkbox
