--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -23,6 +23,11 @@ widgetAppearanceSecondary = "Sekundär"
 widgetAppearanceSuccess = "Erfolg"
 widgetAppearanceTooltip = "Grundfarbe für das Erscheinungsbild des Elements wählen."
 widgetAppearanceWarning = "Warnung"
+widgetButtonSizeLabel = "Button-Größe"
+widgetButtonSizeLg = "Groß"
+widgetButtonSizeNormal = "Standard"
+widgetButtonSizeSm = "Klein"
+widgetButtonSizeTooltip = "Größe des Buttons auswählen"
 widgetIconCheck = "Haken"
 widgetIconCircle = "Kreis (gefüllt)"
 widgetIconCircleThin = "Kreis (leer)"
@@ -44,7 +49,8 @@ widgetNum6 = "6"
 widgetNum7 = "7"
 widgetNum8 = "8"
 widgetNum9 = "9"
-widgetNum9 = "9"
+widgetUnitPx = "px"
+widgetUnitRem = "rem"
 ; Grid
 gridFourColumnLabel = "Raster mit 4 Spalten"
 gridThreeColumnLabel = "Raster mit 3 Spalten"
@@ -64,6 +70,7 @@ gridTwoColumnLayoutTooltip = "Raster-Layout wählen."
 gridTwoColumnLayoutTwoToOne = "66% : 33%"
 gridTwoColumnLayoutFiveToSeven = "40% : 60%"
 gridTwoColumnLayoutSevenToFive = "60% : 40%"
+gridTwoColumnLayoutNineToThree = "75% : 25%"
 ; Image box
 imageBoxCategoryIdLabel = "Kategorie"
 imageBoxCategoryIdTooltip = "Name und Bild werden angezeigt."
@@ -143,8 +150,8 @@ itemPrice_asc = "Preis ⬆"
 itemPrice_desc = "Preis ⬇"
 itemProducerName_asc = "Hersteller A-Z"
 itemProducerName_desc = "Hersteller Z-A"
-itemRecommendedSorting = "Empfohlen"
 itemRandom = "Zufällig"
+itemRecommendedSorting = "Empfohlen"
 itemVariationCreateTimestamp_asc = "Älteste Artikel"
 itemVariationCreateTimestamp_desc = "Neueste Artikel"
 itemVariationCustomNumber_asc = "Variantennummer ⬆"
@@ -164,7 +171,6 @@ legalInformationShowLegalDisclosureLabel = "Impressum sichtbar machen"
 legalInformationShowPrivacyPolicyLabel = "Datenschutzerklärung sichtbar machen"
 ; List
 linkListLabel = "Linkliste"
-listLabel = "Liste"
 listCenteredLabel = "Liste zentrieren"
 listEntryLabel = "Listeneintrag"
 listEntryNameLabel = "Angezeigter Text"
@@ -173,6 +179,7 @@ listEntryUrlLabel = "URL"
 listEntryUrlTooltip = "URL eingeben."
 listIconLabel = "Icon"
 listIconTooltip = "Icon für Listeneinträge wählen."
+listLabel = "Liste"
 listTitleLabel = "Listentitel"
 listTitleTooltip = "Titel für die Liste eingeben."
 ; Live Shopping
@@ -211,7 +218,6 @@ liveShoppingPlaceholderTitle = "Kein Angebot aktiv"
 liveShoppingPlaceholderDescription = "An dieser Stelle wird kein Inhalt angezeigt, bis ein Angebot aktiv ist."
 ; LogoutButton
 logoutButtonLabel = "Ausloggen-Button"
-logoutButtonSizeTooltip = "Größe des Ausloggen-Buttons auswählen"
 ; StickyContainer
 stickyContainerLabel = "Sticky Container"
 ; Text
@@ -282,11 +288,11 @@ separatorMargin = "Außenabstand"
 categoryBasket = "Warenkorb"
 categoryCheckout = "Checkout"
 categoryCustomer = "Kundendaten"
-categoryStructure = "Struktur"
 categoryFooter = "Footer"
 categoryHeader = "Header"
-categoryItem = "Artikel"
 categoryImage = "Bild"
+categoryItem = "Artikel"
+categoryStructure = "Struktur"
 categoryText = "Text"
 ; Collapse
 collapseLabel = "FAQ"
@@ -320,11 +326,6 @@ showBasketTotalSumGross = "Bruttogesamtsumme"
 showBasketSalesCoupon = "Verkaufsgutschein"
 showBasketOpenAmount = "Ausstehender Betrag"
 ; Place order
-placeOrderButtonSizeLabel = "Button-Größe"
-placeOrderButtonSizeLg = "Groß"
-placeOrderButtonSizeNormal = "Standard"
-placeOrderButtonSizeSm = "Klein"
-placeOrderButtonSizeTooltip = "Größe des Kaufen-Buttons auswählen"
 placeOrderLabel = "Kaufen-Button"
 ; Address
 addressLabel = "Adressauswahl"
