--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -23,6 +23,11 @@ widgetAppearanceSecondary   = "Secondary"
 widgetAppearanceSuccess = "Success"
 widgetAppearanceTooltip = "Select the base colour of the appearance of the element."
 widgetAppearanceWarning = "Warning"
+widgetButtonSizeLabel = "Button size"
+widgetButtonSizeLg = "Large"
+widgetButtonSizeNormal = "Default"
+widgetButtonSizeSm = "Small"
+widgetButtonSizeTooltip = "Select button size."
 widgetIconCheck = "Check mark"
 widgetIconCircle = "Circle (filled)"
 widgetIconCircleThin = "Circle (empty)"
@@ -65,6 +70,7 @@ gridTwoColumnLayoutTooltip = "Select grid layout."
 gridTwoColumnLayoutTwoToOne = "66% : 33%"
 gridTwoColumnLayoutFiveToSeven = "40% : 60%"
 gridTwoColumnLayoutSevenToFive = "60% : 40%"
+gridTwoColumnLayoutNineToThree = "75% : 25%"
 ; Image box
 imageBoxCategoryIdLabel = "Category"
 imageBoxCategoryIdTooltip = "Name and image are displayed."
@@ -212,7 +218,6 @@ liveShoppingPlaceholderTitle = "No active offer"
 liveShoppingPlaceholderDescription = "We will showcase the next offer here once it becomes active."
 ; LogoutButton
 logoutButtonLabel = "Logout button"
-logoutButtonSizeTooltip = "Select logout button size."
 ; StickyContainer
 stickyContainerLabel = "Sticky container"
 ; Text
@@ -279,7 +284,7 @@ navigationNavigationStyleTooltip = "Select style of the category navigation."
 ; Separator
 separatorLabel = "Dividing line"
 separatorMargin = "Margin"
-; Types
+; Categories
 categoryBasket = "Basket"
 categoryCheckout = "Checkout"
 categoryCustomer = "Customer information"
@@ -321,11 +326,6 @@ showBasketTotalSumGross = "Total (gross)"
 showBasketSalesCoupon = "Gift card"
 showBasketOpenAmount = "Outstanding amount"
 ; Place order
-placeOrderButtonSizeLabel = "Button size"
-placeOrderButtonSizeLg = "Large"
-placeOrderButtonSizeNormal = "Default"
-placeOrderButtonSizeSm = "Small"
-placeOrderButtonSizeTooltip = "Select button size."
 placeOrderLabel = "Purchase button"
 ; Address
 addressLabel = "Address selection"
@@ -368,7 +368,7 @@ addressFieldEnPhoneNumber = Phone number
 ; Basket
 basketLabel = "Shopping cart content"
 ; ContactWish
-contactWish = "Notes and requests"
+contactWishLabel = "Notes and requests"
 contactWishHinttextLabel = "Text"
 contactWishHinttextTooltip = "Enter text. This text is displayed below the title."
 ; Coupon
