--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -397,3 +397,9 @@ subscribeNewsletterCheckLabel = "Newsletter subscription checkbox"
 ; Shipping Privacy Check
 shippingPrivacyCheckLabel = "Shipping information checkbox"
 shippingPrivacyCheckPlaceholderDescription = "This widget only displays content if a shipping profile is selected for which the option "Agreement upon data transfer" is active."
+; Order Return History
+orderReturnHistoryLabel = "Retouren Historie"
+orderReturnHistoryHintTextLabel = "Hinweistext"
+orderReturnHistoryHintTextTooltip = "Hinweistext eingeben. Dieser Text wird oberhalb der Retouren angezeigt."
+orderReturnHistoryItemsPerPageLabel = "Anzahl der Retouren pro Seite"
+orderReturnHistoryItemsPerPageTooltip = "Zahl eingeben. Diese Zahl spiegelt die Anzahl der auf der Retouren Historie befindlichen Einträge wieder."
