--- a/resources/lang/en/Config.properties
+++ b/resources/lang/en/Config.properties
@@ -1,4 +1,4 @@
-+availability1 = Availability 1
+availability1 = Availability 1
 availability10 = Availability 10
 availability2 = Availability 2
 availability3 = Availability 3
