ADD missing properties

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -34,6 +34,10 @@ widgetIconEuro = "Eurozeichen"
 widgetIconHeart = "Herz"
 widgetIconNone = "Ohne"
 widgetIconThumbsUp = "Daumen hoch"
+widgetCustomMargin = "Außenabstand ändern"
+widgetMargin = "Außenabstand"
+widgetCustomPadding = "Innenabstand ändern"
+widgetPadding = "Innenabstand"
 widgetNum0 = "0"
 widgetNum1 = "1"
 widgetNum2 = "2"
