--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -34,6 +34,10 @@ widgetIconEuro = "Euro sign"
 widgetIconHeart = "Heart"
 widgetIconNone = "None"
 widgetIconThumbsUp = "Thumbs up"
+widgetCustomMargin = "Edit margin"
+widgetMargin = "Margin"
+widgetCustomPadding = "Edit padding"
+widgetPadding = "Padding"
 widgetNum0 = "0"
 widgetNum1 = "1"
 widgetNum2 = "2"
