CHANGE OrderReturnHistoryWidget - add placeholder for non-logged-in users in the shop builder

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -397,8 +397,9 @@ subscribeNewsletterCheckLabel = "Newsletter-Checkbox"
 shippingPrivacyCheckLabel = "Versandinformationen-Checkbox"
 shippingPrivacyCheckPlaceholderDescription = "An dieser Stelle wird nur Inhalt angezeigt, wenn ein Versandprofil ausgewählt ist, für das die Option "Einwilligung zur Datenübermittlung" aktiv ist."
 ; Order Return History
-orderReturnHistoryLabel = "Retouren Historie"
+orderReturnHistoryLabel = "Retourenhistorie"
 orderReturnHistoryHintTextLabel = "Hinweistext"
 orderReturnHistoryHintTextTooltip = "Hinweistext eingeben. Dieser Text wird oberhalb der Retouren angezeigt."
 orderReturnHistoryItemsPerPageLabel = "Anzahl der Retouren pro Seite"
 orderReturnHistoryItemsPerPageTooltip = "Zahl eingeben. Diese Zahl spiegelt die Anzahl der auf der Retouren Historie befindlichen Einträge wieder."
+orderReturnHistoryPlaceholderDescription = "An dieser Stelle wird eingeloggten Kunden die Retourenhistorie angezeigt."
