--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -398,8 +398,9 @@ subscribeNewsletterCheckLabel = "Newsletter subscription checkbox"
 shippingPrivacyCheckLabel = "Shipping information checkbox"
 shippingPrivacyCheckPlaceholderDescription = "This widget only displays content if a shipping profile is selected for which the option "Agreement upon data transfer" is active."
 ; Order Return History
-orderReturnHistoryLabel = "Retouren Historie"
+orderReturnHistoryLabel = "Retourenhistorie"
 orderReturnHistoryHintTextLabel = "Hinweistext"
 orderReturnHistoryHintTextTooltip = "Hinweistext eingeben. Dieser Text wird oberhalb der Retouren angezeigt."
 orderReturnHistoryItemsPerPageLabel = "Anzahl der Retouren pro Seite"
 orderReturnHistoryItemsPerPageTooltip = "Zahl eingeben. Diese Zahl spiegelt die Anzahl der auf der Retouren Historie befindlichen Einträge wieder."
+orderReturnHistoryPlaceholderDescription = "An dieser Stelle wird eingeloggten Kunden die Retourenhistorie angezeigt."
