--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -401,5 +401,5 @@ orderReturnHistoryLabel = "Retourenhistorie"
 orderReturnHistoryHintTextLabel = "Hinweistext"
 orderReturnHistoryHintTextTooltip = "Hinweistext eingeben. Dieser Text wird oberhalb der Retouren angezeigt."
 orderReturnHistoryItemsPerPageLabel = "Anzahl der Retouren pro Seite"
-orderReturnHistoryItemsPerPageTooltip = "Zahl eingeben. Diese Zahl spiegelt die Anzahl der auf der Retouren Historie befindlichen Einträge wieder."
+orderReturnHistoryItemsPerPageTooltip = "Anzahl der Retouren eingeben, die in der Retourenhistorie pro Seite dargestellt werden."
 orderReturnHistoryPlaceholderDescription = "An dieser Stelle wird eingeloggten Kunden die Retourenhistorie angezeigt."
