--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -398,9 +398,9 @@ subscribeNewsletterCheckLabel = "Newsletter subscription checkbox"
 shippingPrivacyCheckLabel = "Shipping information checkbox"
 shippingPrivacyCheckPlaceholderDescription = "This widget only displays content if a shipping profile is selected for which the option "Agreement upon data transfer" is active."
 ; Order Return History
-orderReturnHistoryLabel = "Retourenhistorie"
-orderReturnHistoryHintTextLabel = "Hinweistext"
-orderReturnHistoryHintTextTooltip = "Hinweistext eingeben. Dieser Text wird oberhalb der Retouren angezeigt."
-orderReturnHistoryItemsPerPageLabel = "Anzahl der Retouren pro Seite"
-orderReturnHistoryItemsPerPageTooltip = "Zahl eingeben. Diese Zahl spiegelt die Anzahl der auf der Retouren Historie befindlichen Einträge wieder."
-orderReturnHistoryPlaceholderDescription = "An dieser Stelle wird eingeloggten Kunden die Retourenhistorie angezeigt."
+orderReturnHistoryLabel = “Returns history”
+orderReturnHistoryHintTextLabel = “Text”
+orderReturnHistoryHintTextTooltip = “Enter text. This text is displayed above the returns history."
+orderReturnHistoryItemsPerPageLabel = “Number of returns per page"
+orderReturnHistoryItemsPerPageTooltip = “Enter the number of returns to be displayed per page in the returns history.”
+orderReturnHistoryPlaceholderDescription = "This is where logged-in customers can see their returns history."
