corrected widget.properties

--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -276,7 +276,7 @@ navigationNavigationStyleTooltip = "Select style of the category navigation."
 ; Separator
 separatorLabel = "Dividing line"
 separatorMargin = "Margin"
-; Types
+; Categories
 categoryBasket = "Basket"
 categoryCheckout = "Checkout"
 categoryCustomer = "Customer information"
