--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -44,7 +44,8 @@ widgetNum6 = "6"
 widgetNum7 = "7"
 widgetNum8 = "8"
 widgetNum9 = "9"
-widgetNum9 = "9"
+widgetUnitPx = "px"
+widgetUnitRem = "rem"
 ; Grid
 gridFourColumnLabel = "Raster mit 4 Spalten"
 gridThreeColumnLabel = "Raster mit 3 Spalten"
@@ -143,8 +144,8 @@ itemPrice_asc = "Preis ⬆"
 itemPrice_desc = "Preis ⬇"
 itemProducerName_asc = "Hersteller A-Z"
 itemProducerName_desc = "Hersteller Z-A"
-itemRecommendedSorting = "Empfohlen"
 itemRandom = "Zufällig"
+itemRecommendedSorting = "Empfohlen"
 itemVariationCreateTimestamp_asc = "Älteste Artikel"
 itemVariationCreateTimestamp_desc = "Neueste Artikel"
 itemVariationCustomNumber_asc = "Variantennummer ⬆"
@@ -164,7 +165,6 @@ legalInformationShowLegalDisclosureLabel = "Impressum sichtbar machen"
 legalInformationShowPrivacyPolicyLabel = "Datenschutzerklärung sichtbar machen"
 ; List
 linkListLabel = "Linkliste"
-listLabel = "Liste"
 listCenteredLabel = "Liste zentrieren"
 listEntryLabel = "Listeneintrag"
 listEntryNameLabel = "Angezeigter Text"
@@ -173,6 +173,7 @@ listEntryUrlLabel = "URL"
 listEntryUrlTooltip = "URL eingeben."
 listIconLabel = "Icon"
 listIconTooltip = "Icon für Listeneinträge wählen."
+listLabel = "Liste"
 listTitleLabel = "Listentitel"
 listTitleTooltip = "Titel für die Liste eingeben."
 ; Live Shopping
@@ -279,11 +280,11 @@ separatorMargin = "Außenabstand"
 categoryBasket = "Warenkorb"
 categoryCheckout = "Checkout"
 categoryCustomer = "Kundendaten"
-categoryStructure = "Struktur"
 categoryFooter = "Footer"
 categoryHeader = "Header"
-categoryItem = "Artikel"
 categoryImage = "Bild"
+categoryItem = "Artikel"
+categoryStructure = "Struktur"
 categoryText = "Text"
 ; Collapse
 collapseLabel = "FAQ"
