--- a/resources/lang/en/Config.properties
+++ b/resources/lang/en/Config.properties
@@ -262,8 +262,8 @@ sortDataManufacturerAsc = Manufacturer A-Z
 sortDataManufacturerDesc = Manufacturer Z-A
 sortDataItemScore = Relevance
 sortDataRandom = Random
-sortDataTopsellerAsc = Top Seller ⬆
-sortDataTopsellerDesc = Top Seller ⬇
+sortDataTopsellerAsc = Top seller ⬆
+sortDataTopsellerDesc = Top seller ⬇
 sortDefaultSortingLabel = Default sorting value for category view
 sortingPriorityCategory1Label = Recommended item sorting: First sorting value
 sortingPriorityCategory2Label = Recommended item sorting: Second sorting value
