--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -156,8 +156,8 @@ itemVariationCustomNumber_asc = "Variation number ⬆"
 itemVariationCustomNumber_desc = "Variation number ⬇"
 itemVariationLastUpdateTimestamp_asc = "Last update"
 itemVariationLastUpdateTimestamp_desc = "First update"
-itemVariationTopseller_asc = "Top Seller ⬆"
-itemVariationTopseller_desc = "Top Seller ⬇"
+itemVariationTopseller_asc = "Top seller ⬆"
+itemVariationTopseller_desc = "Top seller ⬇"
 ; Legal information
 legalInformationCancellationFormContainerLabel = "Cancellation form"
 legalInformationCancellationPdfActiveLabel = "Use PDF file as form"
