--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -397,3 +397,5 @@ subscribeNewsletterCheckLabel = "Newsletter subscription checkbox"
 ; Shipping Privacy Check
 shippingPrivacyCheckLabel = "Shipping information checkbox"
 shippingPrivacyCheckPlaceholderDescription = "This widget only displays content if a shipping profile is selected for which the option "Agreement upon data transfer" is active."
+; MyAccount
+myAccountHintTextLabel = "Hinweistext"
