--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -34,6 +34,10 @@ widgetIconEuro = "Euro sign"
 widgetIconHeart = "Heart"
 widgetIconNone = "None"
 widgetIconThumbsUp = "Thumbs up"
+widgetCustomMargin = "Edit margin"
+widgetMargin = "Margin"
+widgetCustomPadding = "Edit padding"
+widgetPadding = "Padding"
 widgetNum0 = "0"
 widgetNum1 = "1"
 widgetNum2 = "2"
@@ -293,9 +297,6 @@ collapseBoxHeadlineLabel = "Question"
 collapseBoxHeadlineTooltip = "Enter question. This text will be the title of the entry."
 collapseBoxTextareaLabel = "Answer"
 collapseBoxTextareaTooltip = "Enter answer. This text will be the answer to the question and will be displayed after clicking the question."
-; MyAccount
-myAccountHintTextLabel = "Hinweistext"
-myAccountAccountSettingsLabel = "Account settings"
 ; Shipping Profile Select
 shippingProfileLabel = "Shipping profile selection"
 shippingProfileHintTextLabel = "Text"
@@ -402,3 +403,14 @@ shippingPrivacyCheckLabel = "Shipping information checkbox"
 shippingPrivacyCheckPlaceholderDescription = "This widget only displays content if a shipping profile is selected for which the option "Agreement upon data transfer" is active."
 ; MyAccount
 myAccountHintTextLabel = "Hinweistext"
+; Greeting Widget
+greetingWidgetEmail = "E-Mail"
+greetingWidgetFemale = "Ms."
+greetingWidgetForename = "Forename"
+greetingWidgetForenameSurname = "Forename and Surname"
+greetingWidgetLabel = "Greeting"
+greetingWidgetMale = "Mr."
+greetingWidgetSalutationStyle = "Salutation style"
+greetingWidgetSalutationStyleTooltip = "Changing the preferred salutation style"
+greetingWidgetSurnameForename = "Surname, forename"
+greetingWidgetTitleSurname = "Salutation and surname"
