--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -409,3 +409,14 @@ shippingPrivacyCheckLabel = "Versandinformationen-Checkbox"
 shippingPrivacyCheckPlaceholderDescription = "An dieser Stelle wird nur Inhalt angezeigt, wenn ein Versandprofil ausgewählt ist, für das die Option "Einwilligung zur Datenübermittlung" aktiv ist."
 ; MyAccount
 myAccountHintTextLabel = "Hinweistext"
+; Greeting Widget
+greetingWidgetEmail = "E-Mail"
+greetingWidgetFemale = "Frau"
+greetingWidgetForename = "Vorname"
+greetingWidgetForenameSurname = "Vorname und Nachname"
+greetingWidgetLabel = "Begrüßung"
+greetingWidgetMale = "Herr"
+greetingWidgetSalutationStyle = "Stil der Anrede"
+greetingWidgetSalutationStyleTooltip = "Änder die bevorzugte Anrede"
+greetingWidgetSurnameForename = "Nachname, Vorname"
+greetingWidgetTitleSurname = "Anrede und Nachname"
