finished greeting widget

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -417,6 +417,5 @@ greetingWidgetForenameSurname = "Vorname und Nachname"
 greetingWidgetLabel = "Begrüßung"
 greetingWidgetMale = "Herr"
 greetingWidgetSalutationStyle = "Stil der Anrede"
-greetingWidgetSalutationStyleTooltip = "Änder die bevorzugte Anrede"
-greetingWidgetSurnameForename = "Nachname, Vorname"
+greetingWidgetSalutationStyleTooltip = "Ändern der bevorzugten Anrede"
 greetingWidgetTitleSurname = "Anrede und Nachname"
