--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -411,6 +411,5 @@ greetingWidgetForenameSurname = "Forename and Surname"
 greetingWidgetLabel = "Greeting"
 greetingWidgetMale = "Mr."
 greetingWidgetSalutationStyle = "Salutation style"
-greetingWidgetSalutationStyleTooltip = "Changing the preferred salutation style"
-greetingWidgetSurnameForename = "Surname, forename"
+greetingWidgetSalutationStyleTooltip = "Change the preferred salutation style"
 greetingWidgetTitleSurname = "Salutation and surname"
