--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -23,6 +23,11 @@ widgetAppearanceSecondary   = "Secondary"
 widgetAppearanceSuccess = "Success"
 widgetAppearanceTooltip = "Select the base colour of the appearance of the element."
 widgetAppearanceWarning = "Warning"
+widgetButtonSizeLabel = "Button size"
+widgetButtonSizeLg = "Big"
+widgetButtonSizeNormal = "Normal"
+widgetButtonSizeSm = "Small"
+widgetButtonSizeTooltip = "Select button size"
 widgetIconCheck = "Check mark"
 widgetIconCircle = "Circle (filled)"
 widgetIconCircleThin = "Circle (empty)"
@@ -216,6 +221,8 @@ liveShoppingShowStockLabel = "Display stock"
 liveShoppingShowStockProgressLabel = "Display stock-dependent prograss bar"
 liveShoppingPlaceholderTitle = "No active offer"
 liveShoppingPlaceholderDescription = "We will showcase the next offer here once it becomes active."
+; LogoutButton
+logoutButtonLabel = "Logout button"
 ; StickyContainer
 stickyContainerLabel = "Sticky container"
 ; Text
@@ -282,7 +289,7 @@ navigationNavigationStyleTooltip = "Select style of the category navigation."
 ; Separator
 separatorLabel = "Dividing line"
 separatorMargin = "Margin"
-; Types
+; Categories
 categoryBasket = "Basket"
 categoryCheckout = "Checkout"
 categoryCustomer = "Customer information"
@@ -327,11 +334,6 @@ showBasketTotalSumGross = "Total (gross)"
 showBasketSalesCoupon = "Gift card"
 showBasketOpenAmount = "Outstanding amount"
 ; Place order
-placeOrderButtonSizeLabel = "Button size"
-placeOrderButtonSizeLg = "Large"
-placeOrderButtonSizeNormal = "Default"
-placeOrderButtonSizeSm = "Small"
-placeOrderButtonSizeTooltip = "Select button size."
 placeOrderLabel = "Purchase button"
 ; Address
 addressLabel = "Address selection"
