reverted changes in js files fixed widget.properties

--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -74,6 +74,7 @@ gridTwoColumnLayoutTooltip = "Select grid layout."
 gridTwoColumnLayoutTwoToOne = "66% : 33%"
 gridTwoColumnLayoutFiveToSeven = "40% : 60%"
 gridTwoColumnLayoutSevenToFive = "60% : 40%"
+gridTwoColumnLayoutNineToThree = "75% : 25%"
 ; Image box
 imageBoxCategoryIdLabel = "Category"
 imageBoxCategoryIdTooltip = "Name and image are displayed."
@@ -378,7 +379,7 @@ addressFieldEnPhoneNumber = Phone number
 ; Basket
 basketLabel = "Shopping cart content"
 ; ContactWish
-contactWish = "Notes and requests"
+contactWishLabel = "Notes and requests"
 contactWishHintTextLabel = "Text"
 contactWishHintTextTooltip = "Enter text. This text is displayed below the title."
 ; Coupon
