--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -373,7 +373,7 @@ addressFieldEnPhoneNumber = Phone number
 ; Basket
 basketLabel = "Shopping cart content"
 ; ContactWish
-contactWish = "Notes and requests"
+contactWishLabel = "Notes and requests"
 contactWishHintTextLabel = "Text"
 contactWishHintTextTooltip = "Enter text. This text is displayed below the title."
 ; Coupon
