--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -49,6 +49,8 @@ widgetNum7 = "7"
 widgetNum8 = "8"
 widgetNum9 = "9"
 widgetNum9 = "9"
+widgetUnitPx = "px"
+widgetUnitRem = "rem"
 ; Grid
 gridFourColumnLabel = "Raster mit 4 Spalten"
 gridThreeColumnLabel = "Raster mit 3 Spalten"
