--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -344,13 +344,13 @@ addressLayoutTooltip = "Adressformat DE oder UK wählen."
 addressLayoutDE = "Adressformat DE"
 addressLayoutGB = "Adressformat UK"
 addressFieldsInvoiceDE = "Rechnungsadressfelder anzeigen (DE)"
-addressRequiredFieldsInvoiceDE = "Rechnungsadressfelder validieren (DE)"
+addressRequiredFieldsInvoiceDE = "Pflichtfelder für Rechnungsadrese aktivieren (DE)"
 addressFieldsInvoiceGB = "Rechnungsadressfelder anzeigen (UK)"
-addressRequiredFieldsInvoiceGB = "Rechnungsadressfelder validieren (UK)"
+addressRequiredFieldsInvoiceGB = "Pflichtfelder für Rechnungsadrese aktivieren (UK)"
 addressFieldsShippingDE = "Lieferadressfelder anzeigen (DE)"
-addressRequiredFieldsShippingDE = "Lieferadressfelder validieren (DE)"
+addressRequiredFieldsShippingDE = "Pflichtfelder für Lieferadresse aktivieren (DE)"
 addressFieldsShippingGB = "Lieferadressfelder anzeigen (UK)"
-addressRequiredFieldsShippingGB = "Lieferadressfelder validieren (UK)"
+addressRequiredFieldsShippingGB = "Pflichtfelder für Lieferadresse aktivieren (UK)"
 addressFieldName1 = Firma
 addressFieldVatNumber = Ust.-Nr.
 addressFieldSalutation = Anrede
