--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -344,9 +344,9 @@ addressLayoutTooltip = "Adressformat DE oder UK wählen."
 addressLayoutDE = "Adressformat DE"
 addressLayoutGB = "Adressformat UK"
 addressFieldsInvoiceDE = "Rechnungsadressfelder anzeigen (DE)"
-addressRequiredFieldsInvoiceDE = "Pflichtfelder für Rechnungsadrese aktivieren (DE)"
+addressRequiredFieldsInvoiceDE = "Pflichtfelder für Rechnungsadresse aktivieren (DE)"
 addressFieldsInvoiceGB = "Rechnungsadressfelder anzeigen (UK)"
-addressRequiredFieldsInvoiceGB = "Pflichtfelder für Rechnungsadrese aktivieren (UK)"
+addressRequiredFieldsInvoiceGB = "Pflichtfelder für Rechnungsadresse aktivieren (UK)"
 addressFieldsShippingDE = "Lieferadressfelder anzeigen (DE)"
 addressRequiredFieldsShippingDE = "Pflichtfelder für Lieferadresse aktivieren (DE)"
 addressFieldsShippingGB = "Lieferadressfelder anzeigen (UK)"
