ADD translations for cross prices to allow displaying a prefix or a footnote for cross prices

--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -175,6 +175,10 @@ couponRemoveSuccess = "Der Gutschein wurde erfolgreich entfernt."
 couponWrongCustomerGroup = "Der Gutschein kann nur von Kunden mit einer anderen Kundenklasse eingelöst werden."
 couponWrongCustomerType = "Der Gutschein kann nur von Kunden mit einem anderen Kundentyp eingelöst werden."
 ; coupon - Gutschein
+; cross prices
+crossPriceSpecialOffer = ":price"
+crossPriceRRP = "UVP :price"
+; cross prices
 ; dev - Entwickler
 devDateFormat = "d.m.Y"
 devDateFormatMoment = "DD.MM.YYYY"
