--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -175,6 +175,10 @@ couponRemoveSuccess = "The coupon has been removed successfully."
 couponWrongCustomerGroup = "The coupon can only be redeemed by customers with the correct customer class."
 couponWrongCustomerType = "The coupon can only be redeemed by customers with the correct customer type."
 ; coupon - Coupon
+; cross prices
+crossPriceSpecialOffer = ":price"
+crossPriceRRP = "RRP :price"
+; cross prices
 ; dev - Developer
 devDateFormat = "d.m.Y"
 devDateFormatMoment = "DD.MM.YYYY"
